ASP.Net MVC Concepts

--- a/Day 16/shoppingAPP_MVC/shoppingAPP_MVC/Views/Product/ProductList.cshtml
+++ b/Day 16/shoppingAPP_MVC/shoppingAPP_MVC/Views/Product/ProductList.cshtml
@@ -6,6 +6,9 @@
 
 <h1>ProductList</h1>
 
+<h1>Developer :  @ViewBag.developer</h1>
+<h1>Team Size :  @ViewBag.teamSize</h1>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
