--- a/day19/consume_RestAPI/consume_RestAPI/Views/Shared/_Layout.cshtml
+++ b/day19/consume_RestAPI/consume_RestAPI/Views/Shared/_Layout.cshtml
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body style="background-color:aquamarine">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">consume_RestAPI</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Products API</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,6 +23,14 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClientsideAPICall" asp-action="GetRESTDataClient">Json PlaceHolder</a>
+                        </li>
+
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClientsideAPICall" asp-action="GetProducts">Products</a>
                         </li>
                     </ul>
                 </div>
